@@ -569,6 +569,9 @@ fully support the editing toolbar, but was found to be too confusing.
 * Do not tidy interface messages (unless full tidy is set)
 * Do not trust equality propagation and give more hints to MySQL
   optimizer for revision fetches (avoids index scans)
+* Use revision rate for ETA in dump generation; it tends to be more stable
+  than the per-page count for full-history dumps.
+
 
 === Caveats ===
 
